# cryptomatte-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: cmake-build.yml  cmake-test.yml  cmake-valgrind.yml  cmake-wheels.yml
benchmark/: CMakeLists.txt  README.md  main.cpp  memory_sampling.h  memory_tracker.h
benchmark/images/: README.md
cryptomatte_api/: CMakeLists.txt
cryptomatte_api/include/cryptomatte/: cryptomatte.h  file.h  logger.h  manifest.h  metadata.h  util.h
cryptomatte_api/include/cryptomatte/detail/: channel_util.h  decoding_impl.h  detail.h  json_alias.h  macros.h  scoped_timer.h  string_util.h
cryptomatte_api/src/: cryptomatte.cpp  detail.cpp  file.cpp  manifest.cpp  metadata.cpp
cryptomatte_api/src/detail/: channel_util.cpp  detail.cpp
docs/: CMakeLists.txt  Doxyfile.in  benchmarks.rst  conf.py  index.rst  introduction.rst  requirements.txt
docs/code-ref/: cryptomatte.rst  logging.rst  main.rst  manifest.rst  metadata.rst
python/: CMakeLists.txt
python/bindings/: bind_cryptomatte.h  bind_metadata.h
python/src/: bind_cryptomatte.h  bind_manifest.h  bind_metadata.h  main.cpp
python/test/: test_cryptomatte.py  test_manifest.py  test_metadata.py
test/: CMakeLists.txt  main.cpp
test/images/: README.md  arnold_one_crypto_sidecar_manif.crypto_object.json  arnold_one_crypto_sidecar_manif.exr  arnold_one_crypto_three_levels.exr  arnold_three_crypto.exr  clarisse_two_crypto.exr  karma_cpu_solaris_one_crypto.exr  karma_cpu_solaris_one_crypto_16bit.exr  karma_cpu_solaris_one_crypto_sidecar_manif.exr  karma_xpu_sidecar.json  karma_xpu_solaris_one_crypto.exr  karma_xpu_solaris_one_crypto_sidecar_manif.exr
test/images/cryptomatte_sample_images/: LICENSE.md  README.md
test/reference/arnold/: crypto_material_Material__25.exr  crypto_object_Box001.exr  crypto_object_Plane001.exr  crypto_object_Sphere001.exr  crypto_object_cdcdcdcd.exr
test/reference/clarisse/: crypto_material_build___project_SHOT_NAME_GROUNDPLANE_mtl_GROUNDPLANE.exr  crypto_material_build___project_instance_CAR_MATERIALS___STD_glas_cover_rot___STD_glas_cover_rot.exr  crypto_object_build___project_SHOT_NAME_DUMMY_Dragon_2_obj.exr  crypto_object_build___project_SHOT_NAME_GROUNDPLANE_GROUNDPLANE.exr
test/reference/hou_karma_cpu/: crypto_object__cube1.exr  crypto_object__grid1_mesh_0.exr  crypto_object__sphere1.exr
test/reference/hou_karma_xpu/: crypto_object__cube1.exr  crypto_object__grid1_mesh_0.exr  crypto_object__sphere1.exr
test/reference/vray_cpu/: cryptomatte_pCube1_pCubeShape1.exr  cryptomatte_pPlane1_pPlaneShape1.exr  cryptomatte_pSphere1_pSphereShape1.exr
test/src/: oiio_util.h  test_channel_util.cpp  test_cryptomatte.cpp  test_cryptomatte_load.cpp  test_cryptomatte_load_psyop.cpp  test_cryptomatte_masks.cpp  test_cryptomatte_masks_all.cpp  test_detail.cpp  test_manifest.cpp  test_metadata.cpp  test_string_util.cpp  util.h
